@@ -1,6 +1,7 @@
 2010-12-10  6.6.6-5 Cristy  <quetzlzacatenango@image...>
   * Account for virtual canvas for the -flip / -flop options (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=17626).
+  * Also for -transpose and transverse options
 
 2010-12-09  6.6.6-4 Anthony Thyssen <A.Thyssen@griffith...>
   * Replace IsMagickColorSimilar() which provides the Fuzz Factor threshold
